syntax="proto3";

mesasge Product{
    int32 id_product=1;
}

message TransactionResponse{
    int32 status_code=1;
}

service ProductService{
    rpc AddProduct(Product) returns (TransactionResponse){}
}